route-tables.json
{
    "RouteTables": [
        {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0bf7f2f821cd45894",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.159.128.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "InstanceId": "i-02eb3925e37a0ca0e",
                    "InstanceOwnerId": "432300658811",
                    "NetworkInterfaceId": "eni-0d04d35c834d6491b",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "tck-inspection-tgw-route"
                }
            ],
            "VpcId": "vpc-028bfb7f2d8b84cbf",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0899d56fdaccf7022",
                    "RouteTableId": "rtb-08110c2ef385412bd",
                    "SubnetId": "subnet-017a166cc02b2125a",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0fc9002da1df7996f",
                    "RouteTableId": "rtb-08110c2ef385412bd",
                    "SubnetId": "subnet-028abbcdac3057a65",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-08110c2ef385412bd",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.159.128.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.0.0.0/8",
                    "TransitGatewayId": "tgw-09486d761c59015fd",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0f788f73b86d16b80",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "tck-inspection-public-route"
                }
            ],
            "VpcId": "vpc-028bfb7f2d8b84cbf",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-067099ef39ec4b898",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-0de894dc311526331",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-06a48b78f5e21f12f",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-050efb36d914818db",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-02ec3ddf55ddf3931",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-0a205cd8439d83829",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-085ed83554ae2372a",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-09f8a706a17d836f1",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0c39ba593189a45c1",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-0724d867483345425",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0e92a766dbf2386f3",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-0351f86410a93ceec",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-026f64606368d69e4",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-08a3e657d4aca6c2e",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-00caf477840f32bb3",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-07ead602630fc26b6",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-02c8beb8436385b2a",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-0340f73187775508d",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-01ba33d5d702017e5",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-06c737b03fe38ba34",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0a08d0d59c5355e7e",
                    "RouteTableId": "rtb-09eb5b2644642eb17",
                    "SubnetId": "subnet-0302d7ab845aaf8d6",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-09eb5b2644642eb17",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.158.192.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.159.64.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.199.0.0/16",
                    "TransitGatewayId": "tgw-09486d761c59015fd",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "TransitGatewayId": "tgw-07a7e47fad4adddaa",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-78a54011",
                    "GatewayId": "vpce-0e3db462b671a36f1",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "mga:component",
                    "Value": "vpc-subnet"
                },
                {
                    "Key": "mga:owner",
                    "Value": "datacenter-service"
                },
                {
                    "Key": "mga:site",
                    "Value": "tck"
                },
                {
                    "Key": "map-migrated",
                    "Value": "d-server-00er8glasb6x0f"
                },
                {
                    "Key": "mga:description",
                    "Value": "xxxx"
                },
                {
                    "Key": "Name",
                    "Value": "TCK_private-gaming"
                },
                {
                    "Key": "mga:business",
                    "Value": "smt"
                }
            ],
            "VpcId": "vpc-0a0fb3ab856e73fa4",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0bebbdad17c1fd622",
                    "RouteTableId": "rtb-07e470092087bc738",
                    "SubnetId": "subnet-0a5f8a36e95cab34c",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0160753285ab5a8a4",
                    "RouteTableId": "rtb-07e470092087bc738",
                    "SubnetId": "subnet-0f1478248ab01ec40",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-07e470092087bc738",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.159.128.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "InstanceId": "i-02eb3925e37a0ca0e",
                    "InstanceOwnerId": "432300658811",
                    "NetworkInterfaceId": "eni-030cb57665fa83bc6",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "tck-inspection-private-route"
                }
            ],
            "VpcId": "vpc-028bfb7f2d8b84cbf",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0679809525b8b7c24",
                    "RouteTableId": "rtb-08ba6662ebbac6968",
                    "SubnetId": "subnet-0315cdbb3de9ccc35",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0a6a3bd48e780ba0b",
                    "RouteTableId": "rtb-08ba6662ebbac6968",
                    "SubnetId": "subnet-0c7344259c4284438",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-08ba6662ebbac6968",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.158.192.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.159.64.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "TransitGatewayId": "tgw-07a7e47fad4adddaa",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-78a54011",
                    "GatewayId": "vpce-0e3db462b671a36f1",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TCK_Private-Infrastructure"
                }
            ],
            "VpcId": "vpc-0a0fb3ab856e73fa4",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-05b232730d0ab9c1a",
                    "RouteTableId": "rtb-0f0641c96037631f1",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0f0641c96037631f1",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.159.128.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "VPC-TCK-Inspection-main"
                }
            ],
            "VpcId": "vpc-028bfb7f2d8b84cbf",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0e96e055bdc1e4231",
                    "RouteTableId": "rtb-03b9f354529bfad4b",
                    "SubnetId": "subnet-06f98da6fc497e50f",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-020c6b1e0dd47b064",
                    "RouteTableId": "rtb-03b9f354529bfad4b",
                    "SubnetId": "subnet-0d48037c8f0503252",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-080171dba4d7bd036",
                    "RouteTableId": "rtb-03b9f354529bfad4b",
                    "SubnetId": "subnet-0a3c7b8edd005b7c9",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0f7d129eafcd52480",
                    "RouteTableId": "rtb-03b9f354529bfad4b",
                    "SubnetId": "subnet-02d396bf46935e469",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-03b9f354529bfad4b",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.104.4.0/23",
                    "TransitGatewayId": "tgw-07a7e47fad4adddaa",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.107.16.0/20",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "VpcPeeringConnectionId": "pcx-0818b6b5dedf5320d"
                },
                {
                    "DestinationCidrBlock": "10.107.32.0/20",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "VpcPeeringConnectionId": "pcx-0818b6b5dedf5320d"
                },
                {
                    "DestinationCidrBlock": "10.158.192.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.159.64.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-085161accd6cee729",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "mga:description",
                    "Value": "xxxx"
                },
                {
                    "Key": "mga:business",
                    "Value": "smt"
                },
                {
                    "Key": "mga:component",
                    "Value": "vpc-subnet"
                },
                {
                    "Key": "Name",
                    "Value": "TCK_CloudNativePublic"
                },
                {
                    "Key": "mga:owner",
                    "Value": "datacenter-service"
                },
                {
                    "Key": "mga:site",
                    "Value": "tck"
                },
                {
                    "Key": "map-migrated",
                    "Value": "d-server-00er8glasb6x0f"
                }
            ],
            "VpcId": "vpc-0a0fb3ab856e73fa4",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0fc470da518dbb32b",
                    "RouteTableId": "rtb-0ccc4d89d22f6db78",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0ccc4d89d22f6db78",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.158.192.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "10.159.64.0/18",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "VPC-TCK-main"
                }
            ],
            "VpcId": "vpc-0a0fb3ab856e73fa4",
            "OwnerId": "432300658811"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0fd289616d0a42344",
                    "RouteTableId": "rtb-003a4fd525ab8fe3e",
                    "SubnetId": "subnet-0d225d240b3b217c5",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0576eacbe38a6a0d4",
                    "RouteTableId": "rtb-003a4fd525ab8fe3e",
                    "SubnetId": "subnet-0efb39be0ee86771f",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-003a4fd525ab8fe3e",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.159.128.0/24",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "InstanceId": "i-02eb3925e37a0ca0e",
                    "InstanceOwnerId": "432300658811",
                    "NetworkInterfaceId": "eni-0d04d35c834d6491b",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "Check-Point-TGW-XAZ-Cluster2"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "TGWRouteTable"
                },
                {
                    "Key": "Name",
                    "Value": "TGW Subnets"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:ap-northeast-2:432300658811:stack/Check-Point-TGW-XAZ-Cluster2/8b3c86b0-2cd2-11f1-a068-023af3119dc7"
                }
            ],
            "VpcId": "vpc-028bfb7f2d8b84cbf",
            "OwnerId": "432300658811"
        }
    ]
}
